compl pt 1 - db and notebook setup

--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -52,17 +52,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "18ab463c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['establishments']\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our database\n"
+    "# review the collections in our database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -93,17 +102,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c2da7648",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of establishments with a hygiene score of 20: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# Find the establishments with a hygiene score of 20\n",
-    "query =\n",
+    "query = {'Hygiene' : 20}\n",
+    "results = establishments.find(query)\n",
     "\n",
     "# Use count_documents to display the number of documents in the result\n",
-    "\n",
-    "# Display the first document in the results using pprint\n"
+    "query_count =  establishments.count_documents(query)\n",
+    "print(f\"Number of establishments with a hygiene score of 20: {query_count}\")\n",
+    "# Display the first document in the results using pprint\n",
+    "# pprint(results[0])"
    ]
   },
   {
